--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.71'
+    ext {
+        version_kotlin = '1.3.71'
+        version_constraint_layout = "1.1.3"
+        version_kotlin_coroutines = "1.1.0"
+        version_retrofit = "2.5.0"
+        version_retrofit_coroutines_adapter = "0.9.2"
+        version_koin = "2.1.5"
+        version_picasso = "2.71828"
+    }
     repositories {
         google()
         jcenter()
@@ -9,7 +17,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$version_kotlin"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
