--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,14 +6,14 @@
 
     <application
         android:name=".KaraokeApp"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".presentation.view.activity.ProfileActivity"
+            android:name=".presentation.view.activity.EditProfileActivity"
             android:parentActivityName=".presentation.view.activity.HomeActivity"/>
         <activity
             android:name=".presentation.view.activity.HomeActivity"
