--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,7 @@ dependencies {
     implementation "androidx.room:room-runtime:$version_room"
     kapt "androidx.room:room-compiler:$version_room"
 
+    // ExoPlayer
+    implementation "com.google.android.exoplayer:exoplayer:$version_exoplayer"
+
 }
