--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         version_retrofit_coroutines_adapter = "0.9.2"
         version_koin = "2.1.5"
         version_picasso = "2.71828"
+        version_picasso_tranformations = "2.2.1"
         version_room = "2.2.5"
         version_exoplayer = "2.8.4"
     }
